--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <link rel="stylesheet" type="text/css" href="etchStyles.css" />
 </head>
 <body>
-    <div id="container"></div>
+    <div class="container">
+        <div class="d1">1</div>
+  <div class="d2">2</div>
+  <div class="d3">3</div>
+  <div class="d4">4</div>
+  <div class="d5">5</div>
+    </div>
     
 </body>
 <script src="etchScript.js"></script>
